spacing on footer fixed

--- a/style.css
+++ b/style.css
@@ -115,7 +115,6 @@ a:hover {
 .project-name {
   text-align: left;
   margin-left: 30px;
-  padding-left: 35px;
   text-decoration: underline;
 }
 
@@ -217,7 +216,7 @@ li {
 
   .horizontal-list {
     line-height: 35px;
-    padding: 0px 18px 0px 0px;
+    padding: 0px 9px 0px 9px;
   }
 
   .tech-stack {
